k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app-service
  namespace: test
spec:
  selector:
    app: app-deploy
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
